--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.3.1",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "astro": "^5.17.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.574.0",
